add buttons to take care of tamagotchi

--- a/src/index.html
+++ b/src/index.html
@@ -9,5 +9,11 @@
     <div id="output">
 
     </div>
+
+    <form id="tamagotchiCare">
+      <button id="feeding" type="button" name="button">Feed</button>
+      <button id="playing" type="button" name="button">Play</button>
+      <button id="cleaning" type="button" name="button">Clean</button>
+    </form>
   </body>
 </html>
