add API support from giphy

--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>test</title>
-  </head>
-  <body>
-    <p>Tamagotchi Test</p>
-    <div id="output">
+<head>
+  <meta charset="utf-8">
+  <title>test</title>
+</head>
+<body>
+  <p>Tamagotchi Test</p>
 
-    </div>
+  <img id= "giphyoutput" src="" alt="">
+  <div id="output">
 
+  </div>
     <form id="tamagotchiCare">
       <button id="feeding" type="button" name="button">Feed</button>
       <button id="playing" type="button" name="button">Play</button>
       <button id="cleaning" type="button" name="button">Clean</button>
     </form>
-  </body>
+</body>
 </html>
