--- a/src/index.html
+++ b/src/index.html
@@ -1,20 +1,27 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
   <meta charset="utf-8">
   <title>test</title>
 </head>
 <body>
-  <p>Tamagotchi Test</p>
+  <p>Ur Egg</p>
 
+  <img id="eggWork" />
+<div class="giphy">
   <img id= "giphyoutput" src="" alt="">
+</div>
+
   <div id="output">
 
   </div>
-    <form id="tamagotchiCare">
-      <button id="feeding" type="button" name="button">Feed</button>
-      <button id="playing" type="button" name="button">Play</button>
-      <button id="cleaning" type="button" name="button">Clean</button>
-    </form>
+
+  <form id="tamagotchiCare">
+    <button id="warm" type="button" name="button">Warm</button>
+    <!-- <button id="feeding" type="button" name="button">Feed</button>
+    <button id="playing" type="button" name="button">Play</button>
+    <button id="cleaning" type="button" name="button">Clean</button> -->
+  </form>
 </body>
 </html>
