fix loading bugs

--- a/src/index.html
+++ b/src/index.html
@@ -6,22 +6,33 @@
   <title>test</title>
 </head>
 <body>
-  <p>Ur Egg</p>
 
-  <img id="eggWork" />
-<div class="giphy">
-  <img id= "giphyoutput" src="" alt="">
-</div>
-
-  <div id="output">
-
+  <div class="giphy">
+    <img id= "giphyoutput" src="" alt="">
   </div>
 
-  <form id="tamagotchiCare">
+  <div class="eggUnhatched">
+    <p>Ur Egg</p>
+    <img id="eggWork" />
+    <div id="egg">
+    </div>
+    <br>
     <button id="warm" type="button" name="button">Warm</button>
-    <!-- <button id="feeding" type="button" name="button">Feed</button>
-    <button id="playing" type="button" name="button">Play</button>
-    <button id="cleaning" type="button" name="button">Clean</button> -->
-  </form>
+  </div>
+
+  <div class="afterHatched">
+    <div id="hatched">
+
+    </div>
+    <br>
+    <div id="hatchedButtons">
+      <button id="feeding" type="button" name="button">Feed</button>
+      <button id="playing" type="button" name="button">Play</button>
+      <button id="cleaning" type="button" name="button">Clean</button>
+    </div>
+      <p>Shouldn't be here</p>
+    </div>
+  </div>
+
 </body>
 </html>
