properly shows and hide egg after being hatched

--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
     <button id="warm" type="button" name="button">Warm</button>
   </div>
 
-  <div class="afterHatched">
+  <div id="hatchedStuff">
     <div id="hatched">
 
     </div>
@@ -30,7 +30,6 @@
       <button id="playing" type="button" name="button">Play</button>
       <button id="cleaning" type="button" name="button">Clean</button>
     </div>
-      <p>Shouldn't be here</p>
     </div>
   </div>
 
