commit before merge

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
   <meta charset="utf-8">
-  <title>test</title>
+  <title>Tamagotchi is always hungry</title>
 </head>
 <body>
 
