set booleans for grumpy or spoiled

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
 <body>
 
   <div class="giphy">
+    <p>They're spoiled!</p>
     <img id= "giphyoutput" src="" alt="">
   </div>
 
@@ -26,6 +27,7 @@
     </div>
     <br>
     <div id="hatchedButtons">
+      <button id="resting" type="button" name="button">Rest</button>
       <button id="feeding" type="button" name="button">Feed</button>
       <button id="playing" type="button" name="button">Play</button>
       <button id="cleaning" type="button" name="button">Clean</button>
